# sqlite-es

./: .gitignore  Cargo.toml  README.md  aumtest.db  build.sh
db/: init.sql  insert_events_test.sql  run.txt
src/: cqrs.rs  error.rs  event_repository.rs  lib.rs  testing.rs  types.rs  view_repository.rs
