[package]
name = "sqlite-es"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-es = "0.4.5"

async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "sqlite" , "runtime-tokio-rustls", "json"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
uuid = { version = "1.1", features = ["v4"]}